bitfields/tests/compile_error_cases/errors/bitfield_unsupported_type.stderr
error: The bitfield must have an unsigned integer type as its first argument, 'i32' is unsupported.
 --> tests/compile_error_cases/errors/bitfield_unsupported_type.rs:3:12
  |
3 | #[bitfield(i32)]
  |            ^^^
